# ft_printf

./: CMakeLists.txt  Makefile  README.md  author  bonus_flags_brk.c  check_format.c  colour.c  count.c  count_unsigned.c  flags.c  flags_dioux.c  for_lib.c  ft_printf  ft_printf.c  ft_printf.h  ft_printf_h.h  get_str_before_perc.c  libfeg.c  libfeg2.c  main.c  make_old  manage_csp.c  manage_dioux.c  manage_feg.c  manage_size.c  manage_types.c  manage_unsigned_size.c  parse_addres.c  parse_format.c  parse_hex.c  parse_main.c  parse_string.c  smth_to_a.c  smth_un_to_a.c  str.c  t_print.c  temp.c  tools_format_flag.c  tools_oux_percent.c
libft/: ft_atoi.c  ft_itoa.c  ft_pow.c  ft_strlen.c  libft.h
